--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,7 @@ Thumbs.db #thumbnail cache on Windows
 
 # End of https://www.toptal.com/developers/gitignore/api/flask,python
 config.py
+
+*.pyc
+
+/vscode
